--- a/estate-app/api/package.json
+++ b/estate-app/api/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.16.1",
     "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
